Fixed window sizing. Previously there were issues with adress bars on mobile.

--- a/4UpgradeFE/scss/_authenticate.scss
+++ b/4UpgradeFE/scss/_authenticate.scss
@@ -1,7 +1,8 @@
 @import "config";
 
 .login-wrap {
-	min-height: calc(100vh - #{$footerHeight});
+	flex-grow: 1;
+	min-height: 100%;
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
