--- a/4UpgradeFE/scss/main.scss
+++ b/4UpgradeFE/scss/main.scss
@@ -8,6 +8,12 @@
 @import "spinner";
 @import "notFound";
 
+html,
+body,
+#root {
+	height: 100%;
+}
+
 body {
 	color: $lightTextColor;
 	background-color: $backgroundColor;
@@ -27,8 +33,8 @@ code {
 }
 
 .page {
+	min-height: 100%;
 	overflow: hidden;
-	min-height: 100vh;
 	display: flex;
 	flex-flow: column;
 	justify-content: space-between;
